E05JSONArray.parseJSONArray done. Modified E05 activities. Added a failedToGetData to strings.xml file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,6 @@
 
     <!--    E04     -->
     <string name="failed">Failed</string>
-    <string name="failedToGetData">Failed retrieve data:</string>
+    <string name="failedToGetData">Failed to retrieve data:</string>
 
 </resources>
