Renamed E06Customers to E06Customer; Modified AndroidManifest.xml to recognize activity_e06_customers_activity.xml; Coded displaying each Customer's info at E06CustomersActivity.java;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,13 @@
     <string name="failed">Failed</string>
     <string name="failedToGetData">Failed to retrieve data:</string>
 
+    <!--    E06     -->
+    <string name="CustomerID">CustomerID</string>
+    <string name="CustomerName">CustomerName</string>
+    <string name="ContactName">ContactName</string>
+    <string name="Address">Address</string>
+    <string name="City">City</string>
+    <string name="PostalCode">PostalCode</string>
+    <string name="Country">Country</string>
+
 </resources>
